--- a/site/src/main/webapp/resources/composite/actionDialogs.xhtml
+++ b/site/src/main/webapp/resources/composite/actionDialogs.xhtml
@@ -28,7 +28,7 @@
 
         <h:form id="createForm">
 
-            <p:inputText id="name" value="#{action.name}"/>
+            <p:inputText id="name" styleClass="default" value="#{action.name}"/>
             <p:watermark for="name" value="name"/>
 
             <p><p:selectOneMenu id="type" value="#{treeBean.folderType}">
@@ -77,7 +77,7 @@
         <h:form id="createdDocDialog" enctype="multipart/form-data">
 
             <p:fileUpload value="#{fileActions.file}" mode="simple"/>
-            <p:inputText id="inputTextForDoc" value="#{action.name}" validatorMessage="Wrong name" label="name">
+            <p:inputText id="inputTextForDoc" styleClass="default" value="#{action.name}" validatorMessage="Wrong name" label="name">
                 <f:validateRegex pattern="^[_A-Za-z0-9-\+]{0,14}$"/>
             </p:inputText>
             <p:watermark for="inputTextForDoc" value="name"/>
@@ -100,13 +100,13 @@
             >
         <h:form enctype="multipart/form-data">
 
-            <p:inputText required="true" id="newName" value="#{treeBean.selectedFSObject.name}"/>
+            <p:inputText required="true" styleClass="default" id="newName" value="#{treeBean.selectedFSObject.name}"/>
             <br></br>
-            <p:inputText id="typeOfObject" value="#{treeBean.selectedFSObject.typeId}" disabled="true"/>
+            <p:inputText id="typeOfObject" styleClass="readonly" value="#{treeBean.selectedFSObject.typeId}" disabled="true"/>
 
             <p:fileUpload rendered="#{fileActions.selectedIsFile}" mode="simple" value="#{fileActions.file}"/>
             <br></br>
-            <p:commandButton id="downloadButId" disabled="#{!fileActions.selectedIsFile}" value="Download"
+            <p:commandButton id="downloadButId" rendered="#{fileActions.selectedIsFile}" value="Download"
                              ajax="false"
                              icon="ui-icon-triangle-1-s">
                 <p:fileDownload value="#{fileActions.download(treeBean.selectedFSObject)}"/>
