--- a/site/src/main/webapp/resources/composite/customFsTable.xhtml
+++ b/site/src/main/webapp/resources/composite/customFsTable.xhtml
@@ -74,10 +74,8 @@
 
             </p:splitButton>
 
-            <p:accordionPanel id="accordion" rendered="#{treeBean.ableSearchAdvanced}">
-                <p:ajax event="tabChange" listener="#{treeBean.ableSearchAdvanced}"/>
+            <p:accordionPanel id="accordion"  rendered="#{treeBean.ableSearchAdvanced}">
                 <p:tab title="Advanced search">
-
 
                     <h:outputText value="Type: "/>
                     <p:selectOneRadio id="options" value="#{treeBean.cmisType}">
@@ -87,20 +85,23 @@
                         <f:selectItem itemLabel="Folder" itemValue="cmis:folder"/>
                     </p:selectOneRadio>
                     <p:outputPanel id="properties">
+                        <br/>
 
                         <!--metadata-->
-                        <p:inputText id="metaDataType" value="#{treeBean.metaDataType}" disabled="true"/>
+                        <h:outputText value="Doc type: "/>
+                        <p:inputText id="metaDataType" value="#{treeBean.metaDataType}" disabled="#{treeBean.disableSearchFolderProperties}"/>
                         <p:watermark value="metaDataType" for="metaDataType"/>
                         <br/>
 
                         <!--format-->
+                        <h:outputText value="Content type: "/>
                         <p:inputText id="docType" value="#{treeBean.docType}"
                                      disabled="#{treeBean.disableSearchFolderProperties}"/>
-                        <p:watermark value="metaDataType" for="docType"/>
+                        <p:watermark value="content extension" for="docType"/>
                         <br/>
 
                         <!--date-->
-                        <h:outputText value="From "/>
+                        <h:outputText value="Date: from "/>
                         <p:calendar id="calendarFrom" value="#{treeBean.calendarFrom}"/>
                         <p:watermark value="First date" for="calendarFrom"/>
                         <h:outputText value=" to "/>
@@ -110,24 +111,35 @@
                         <br/>
 
                         <!--Metadata-->
+                        <h:outputText value="Content"/>
                         <p:inputText id="contentType" value="#{treeBean.contentType}" disabled="true"/>
-                        <p:watermark value="findType" for="contentType"/>
+                        <p:watermark value="type" for="contentType"/>
                         <br/>
 
                         <!--size -->
-                        <h:outputText value="From "/>
-                        <p:inputText id="sizeFrom" value="#{treeBean.sizeFrom}"
-                                     disabled="#{treeBean.disableSearchFolderProperties}"/>
+
+                            <h:outputText value="Size:  from "/>
+                            <p:inputText id="sizeFrom" value="#{treeBean.sizeFrom}"
+                                         disabled="#{treeBean.disableSearchFolderProperties}"/>
+
+                            <h:outputText value=" to "/>
+                            <p:inputText id="sizeTo" value="#{treeBean.sizeTo}"
+                                         disabled="#{treeBean.disableSearchFolderProperties}"/>
+
+                            <p:selectOneMenu value="#{treeBean.sizeMultiplier}">
+                                <f:selectItem itemLabel="Kb" itemValue="1024" />
+                                <f:selectItem itemLabel="Mb" itemValue="1048576" />
+                                <f:selectItem itemLabel="Gb" itemValue="1073741824" />
+                            </p:selectOneMenu>
+
                         <p:watermark value="min size" for="sizeFrom"/>
-                        <h:outputText value=" to "/>
-                        <p:inputText id="sizeTo" value="#{treeBean.sizeTo}"
-                                     disabled="#{treeBean.disableSearchFolderProperties}"/>
                         <p:watermark value="max size" for="sizeTo"/>
                         <br/>
 
+                        <h:outputText value="Snippet: "/>
                         <p:inputText id="snippet" value="#{treeBean.snippet}"
                                      disabled="#{treeBean.disableSearchFolderProperties}"/>
-                        <p:watermark value="snippet for search" for="snippet"/>
+                        <p:watermark value="text snippet for search" for="snippet"/>
                         <br/>
                     </p:outputPanel>
 
